--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,55 @@ h3 {
     z-index: 1;
     background-color: white;
 }
+#King {
+    height: 300px;
+    width: 200px;
+    position: absolute;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    left: 210px;
+    top: 150px;
+    z-index: 1;
+    background-color: white;
+}
+#Queen {
+    height: 300px;
+    width: 200px;
+    position: absolute;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    left: 415px;
+    top: 150px;
+    z-index: 1;
+    background-color: white;
+}
+#Jack {
+    height: 300px;
+    width: 305px;
+    position: absolute;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    left: 620px;
+    top: 150px;
+    z-index: 1;
+    background-color: white;
+}
+#Ten {
+    height: 300px;
+    width: 200px;
+    position: absolute;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+    left: 825px;
+    top: 150px;
+    z-index: 1;
+    background-color: white;
+}
+
 
 
 
